cube adds other user's conversations to its sentence db

--- a/config.conf
+++ b/config.conf
@@ -1,7 +1,7 @@
 [cube]
 jid: cube@obnauticus.com
 password: chickentender23
-notserver: #emc2@conference.obnauticus.com
-server: #sillyhats@conference.obnauticus.com
+server: #emc2@conference.obnauticus.com
+notserver: #sillyhats@conference.obnauticus.com
 nick: cube
-textFileName: snow_crash_engl.txt
+textFileName: text.txt
