--- a/config.conf
+++ b/config.conf
@@ -3,5 +3,5 @@ jid: cube@obnauticus.com
 password: chickentender23
 server: #emc2@conference.obnauticus.com
 notserver: #sillyhats@conference.obnauticus.com
-nick: cube
+nick: sphere
 textFileName: text.txt
