--- a/config.conf
+++ b/config.conf
@@ -1,7 +1,6 @@
 [cube]
-jid: cube@obnauticus.com
-password: chickentender23
-server: #emc2@conference.obnauticus.com
-notserver: #sillyhats@conference.obnauticus.com
+jid: 
+password: 
+server: 
 nick: cube
 textFileName: text.txt
